--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- header -->
     <header class=" header w-screen h-16 fixed top-0 left-0 flex justify-between items-center p-6 z-10">
         <div class="logo ml-8">
-            <img src="/imgs/logo.svg" alt="">
+            <img src="imgs/logo.svg" alt="">
         </div>
         <!-- Responsive navBar -->
         <nav class="flex items-center gap-6">
@@ -46,8 +46,8 @@
     <!-- main -->
     <main class="mt-20 md:grid md:grid-cols-2 md:gap-6 md:mt-28">
         <div class="hero pl-14 md:pl-16 md:">
-            <img  class="hidden md:block md:-scale-x-125 md:ml-20" src="/imgs/image-web-3-desktop.jpg" alt="">
-            <img class="w-96 pr-8 hidden" src="/imgs/image-web-3-mobile.jpg" alt="">
+            <img  class="hidden md:block md:-scale-x-125 md:ml-20" src="imgs/image-web-3-desktop.jpg" alt="">
+            <img class="w-96 pr-8 hidden" src="imgs/image-web-3-mobile.jpg" alt="">
             <div class="md:grid md:grid-cols-2 md:gap-20">
                 <h1 class="pt-4 text-6xl font-bold md:w-96">The Bright Future of Web 3.0?</h1>
                 <div class="md:mt-4 md:w-96 ">
@@ -78,7 +78,7 @@
         <div class="gamimg md:grid md:grid-cols-3">
             <div class="game ml-14 grid grid-cols-2 gap-10">
                 <div class="w-32">
-                    <img class="w-28" src="/imgs/image-retro-pcs.jpg" alt="">
+                    <img class="w-28" src="imgs/image-retro-pcs.jpg" alt="">
                 </div>
                 <div class="-ml-20">
                 <span class="text-3xl text-gray-400 font-bold">01</span>
@@ -88,7 +88,7 @@
             </div>
             <div class="game ml-14 grid grid-cols-2 gap-10 mt-8 md:mt-0">
                 <div class="w-32">
-                    <img class="w-28" src="/imgs/image-top-laptops.jpg" alt="">
+                    <img class="w-28" src="imgs/image-top-laptops.jpg" alt="">
                 </div>
                 <div class="-ml-20">
                 <span class="text-3xl text-gray-400 font-bold">02</span>
@@ -98,7 +98,7 @@
             </div>
             <div class="game ml-14 grid grid-cols-2 gap-10 mt-8 pb-11 md:mt-0">
                 <div class="w-32">
-                    <img class="w-28" src="/imgs/image-gaming-growth.jpg" alt="">
+                    <img class="w-28" src="imgs/image-gaming-growth.jpg" alt="">
                 </div>
                 <div class="-ml-20">
                 <span class="text-3xl text-gray-400 font-bold">03</span>
