--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../public/output.css">
+    <link rel="stylesheet" href="output.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
     <!-- header -->
     <header class=" header w-screen h-16 fixed top-0 left-0 flex justify-between items-center p-6 z-10">
         <div class="logo ml-8">
-            <img src="../imgs/logo.svg" alt="">
+            <img src="imgs/logo.svg" alt="">
         </div>
         <!-- Responsive navBar -->
         <nav class="flex items-center gap-6">
