--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- header -->
-    <header class=" header w-screen h-16 fixed top-0 left-0 flex justify-between items-center p-2  md:p-6 z-10">
+    <header class=" header w-screen h-16 fixed top-0 left-0 flex justify-between items-center p-6  md:p-6 z-10">
         <div class="logo ml-8">
             <img src="../imgs/logo.svg" alt="">
         </div>
@@ -76,7 +76,7 @@
     </main>
     <section class="mt-16">
         <div class="gamimg md:grid md:grid-cols-3">
-            <div class="game ml-12 grid grid-cols-2 gap-10">
+            <div class="game ml-12 md:ml-20 grid grid-cols-2 gap-10">
                 <div class="w-32">
                     <img class="w-28" src="imgs/image-retro-pcs.jpg" alt="">
                 </div>
@@ -86,7 +86,7 @@
                 <h5 class="text-gray-400">what happens when old PCs are given modern upgrades?</h5>
                 </div>
             </div>
-            <div class="game ml-12 grid grid-cols-2 gap-10 mt-8 md:mt-0">
+            <div class="game ml-12 md:ml-20 grid grid-cols-2 gap-10 mt-8 md:mt-0">
                 <div class="w-32">
                     <img class="w-28" src="imgs/image-top-laptops.jpg" alt="">
                 </div>
@@ -96,7 +96,7 @@
                 <h5 class="text-gray-400">Our best picks for various needs and budgets.</h5>
                 </div>
             </div>
-            <div class="game ml-12 grid grid-cols-2 gap-10 mt-8 pb-11 md:mt-0">
+            <div class="game ml-12 md:ml-20 grid grid-cols-2 gap-10 mt-8 pb-11 md:mt-0">
                 <div class="w-32">
                     <img class="w-28" src="imgs/image-gaming-growth.jpg" alt="">
                 </div>
